<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/vermelho"
    tools:context=".Activity.Saque">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Saque"
            android:textSize="39sp"
            android:gravity="center"
            android:textColor="@color/branco"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:id="@+id/tv_saque"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqquantia"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tv_quantia"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_quantia"
            android:hint="@string/quantia"
            android:ems="20"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Data"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tv_data"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_data"
            android:hint="@string/data"
            android:inputType="date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tvcategoria"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="right" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tvdescricao"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etdescricao"
            android:hint="@string/sqdescricao"
            android:ems="15"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqSalvar"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:id="@+id/sqSalvar"
        android:layout_marginStart="43dp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqCancelar"
        android:id="@+id/btCancelar"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:layout_marginEnd="49dp"
        android:layout_alignTop="@+id/sqSalvar"
        android:layout_alignEnd="@+id/linearLayout"/>
</RelativeLayout>
