<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/azul"
    tools:context=".Activity.CadastrarConta">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cadastro"
            android:textSize="43sp"
            android:gravity="center"
            android:textColor="@color/branco"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:id="@+id/tv_cadastro"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="25sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tv_nome"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_nome"
            android:hint="@string/cdNome"
            android:ems="50"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="25sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tv_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:ems="15"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cdSenha"
            android:textSize="25sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tvSenha"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSenha"
            android:hint="@string/cdsenha"
            android:inputType="textPassword"
            android:ems="10"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btSalvar"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:id="@+id/btSalvar"
        android:layout_marginStart="43dp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCancelar"
        android:id="@+id/btCancelar"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:layout_marginEnd="49dp"
        android:layout_alignTop="@+id/btSalvar"
        android:layout_alignEnd="@+id/linearLayout"/>
</RelativeLayout>
