<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/verde"
    tools:context=".Activity.Deposito">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Deposito"
            android:textSize="38sp"
            android:gravity="center"
            android:textColor="@color/branco"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:id="@+id/tv_deposito"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dpquantia"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tv_dpquantia"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_dpquantia"
            android:hint="@string/dpquantia"
            android:ems="20"
            android:text="Digite o valor"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dpdata"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tvdpdata"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_dpdata"
            android:hint="@string/dpdata"
            android:inputType="date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dpcategoria"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tvdpcategoria"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="right" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dpdescricao"
            android:textSize="20sp"
            android:textColor="@color/branco"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:id="@+id/tvdpdescricao"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etdpdescricao"
            android:hint="@string/sqdpdescricao"
            android:ems="15"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpSalvar"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:id="@+id/dpSalvar"
        android:layout_marginStart="43dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpCancelar"
        android:id="@+id/btdpCancelar"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:layout_marginEnd="49dp"
        android:layout_alignTop="@+id/dpSalvar"
        android:layout_alignEnd="@+id/linearLayout"/>
</RelativeLayout>
