<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/azul"
    tools:context="br.edu.iff.pooa20161.appwheroney.Wheroney">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Wheroney"
        android:textSize="43sp"
        android:gravity="center"
        android:textColor="@color/branco"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:id="@+id/tv_wheroney"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_deposito"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/verde"
        android:id="@+id/bt_deposito"
        android:layout_marginStart="43dp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_saque"
        android:id="@+id/btSaque"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:background="@color/vermelho"
        android:layout_alignTop="@+id/bt_deposito"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginEnd="40dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lancamento"
        android:id="@+id/btLancamento"
        android:layout_below="@+id/bt_deposito"
        android:layout_marginTop="102dp"
        android:layout_alignParentStart="true"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:textSize="20sp"
        android:layout_alignEnd="@+id/linearLayout" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCategoria"
        android:id="@+id/btCategoria"
        android:layout_below="@+id/btLancamento"
        android:layout_marginTop="45dp"
        android:layout_alignParentStart="true"
        android:textColor="@color/branco"
        android:background="@color/preto"
        android:textSize="20sp"
        android:layout_alignEnd="@+id/btLancamento" />


</RelativeLayout>
